# kbdp-rs

./: Cargo.toml  LICENSE  README.md  build.rs
resources/: app.rc
src/: hook.rs  keyboard_view.rs  layout.rs  main.rs  theme.rs
